# samt-nix

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix  launcher.sh  modctl.sh  organizer.db  schema.sql  shell.nix
bash-legacy/: launcher.sh  modctl.sh  shell.nix
bash-legacy/lib/: common.sh  config.sh  db.sh
lib/: overlay.sh  resolver.sh
src/: config.rs  ctl.rs  db.rs  main.rs  overlay.rs  resolver.rs
