[package]
name = "gta-mod-organizer"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "gta-mo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
fs2 = "0.4"
owo-colors = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
which = "7"
